--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 hidapi = "1.4.2"
 device_query = "1.1.1"
+serde = { version = "1.0.133", features = ["derive", "rc"] }
+serde_json = "1.0.74"
